--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,6 @@ body {
 .container {
   max-width: 1110px;
   margin: 0 auto;
-  padding: 40px 0;
 }
 
 .container .header-top {
@@ -366,6 +365,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 40px 0;
 }
 
 .container .header-top .search {
@@ -426,6 +426,42 @@ body {
 }
 
 .container .header-top .user:hover {
+  text-decoration: underline;
+}
+
+.header-menu {
+  background-color: #0A223D;
+}
+
+.header-menu .nav {
+  padding: 31px 0;
+}
+
+.header-menu .nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+
+.header-menu .nav__item {
+  list-style: none;
+}
+
+.header-menu .nav__link {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.header-menu .nav__link:hover {
   text-decoration: underline;
 }
 /*# sourceMappingURL=main.css.map */
