--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,11 +1,11 @@
 .container
     max-width: 1110px
     margin: 0 auto
-    padding: 40px 0
     .header-top 
         display: flex
         justify-content: space-between
         align-items: center
+        padding: 40px 0
         .search 
             display: flex
             position: relative
@@ -46,5 +46,23 @@
                 margin-left: 18px
             &:hover
                 text-decoration: underline
-
-
+.header-menu
+    background-color: #0A223D
+    .nav
+        padding: 31px 0
+        &__list
+            display: flex
+            justify-content: space-between
+            margin: 0
+            padding: 0
+        &__item
+            list-style: none
+        &__link
+            font-weight: 700
+            font-size: 14px
+            line-height: 18px
+            text-transform: uppercase
+            color: $color-w
+            text-decoration: none
+            &:hover
+                text-decoration: underline
