--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,7 +1,7 @@
 .container
     max-width: 1110px
     margin: 0 auto
-    .header-top 
+    .navbar-top 
         display: flex
         justify-content: space-between
         align-items: center
@@ -12,6 +12,7 @@
             border-radius: 6px
             overflow: hidden
             height: 41px
+            margin-left: -265px
             &__input 
                 width: 350px
                 height: 100%
@@ -46,7 +47,7 @@
                 margin-left: 18px
             &:hover
                 text-decoration: underline
-.header-menu
+.navbar-menu
     background-color: #0A223D
     .nav
         padding: 31px 0
