--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -6,13 +6,16 @@
         justify-content: space-between
         align-items: center
         padding: 40px 0
+        .logo
+            &__image
+                max-width: 177px
         .search 
             display: flex
             position: relative
             border-radius: 6px
             overflow: hidden
             height: 41px
-            margin-left: -265px
+            left: -12%
             &__input 
                 width: 350px
                 height: 100%
