--- a/css/main.css
+++ b/css/main.css
@@ -368,8 +368,12 @@ body {
   padding: 40px 0;
 }
 
+.container .navbar-top .logo {
+  width: 177px;
+}
+
 .container .navbar-top .logo__image {
-  max-width: 177px;
+  max-width: 100%;
 }
 
 .container .navbar-top .search {
@@ -438,15 +442,15 @@ body {
   display: none;
 }
 
-.navbar-menu {
+.navbar-bottom {
   background-color: #0A223D;
 }
 
-.navbar-menu .nav {
+.navbar-bottom .navbar-menu {
   padding: 31px 0;
 }
 
-.navbar-menu .nav__list {
+.navbar-bottom .navbar-menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -457,11 +461,11 @@ body {
   padding: 0;
 }
 
-.navbar-menu .nav__item {
+.navbar-bottom .navbar-menu__item {
   list-style: none;
 }
 
-.navbar-menu .nav__link {
+.navbar-bottom .navbar-menu__link {
   font-weight: 700;
   font-size: 14px;
   line-height: 18px;
@@ -470,21 +474,15 @@ body {
   text-decoration: none;
 }
 
-.navbar-menu .nav__link:hover {
+.navbar-bottom .navbar-menu__link:hover {
   text-decoration: underline;
-}
-
-@media (max-width: 1230px) {
-  .container {
-    width: 90%;
-  }
 }
 
 @media (max-width: 1200px) {
   .container {
     width: 90%;
   }
-  .container .navbar-top .logo__image {
+  .container .navbar-top .logo {
     width: 133px;
   }
   .container .navbar-top .search {
@@ -499,7 +497,7 @@ body {
   .container .navbar-top {
     padding: 30px 0;
   }
-  .container .navbar-top .logo__image {
+  .container .navbar-top .logo {
     width: 133px;
   }
   .container .navbar-top .search {
@@ -517,23 +515,42 @@ body {
   }
 }
 
-@media (min-width: 320px) and (max-width: 729px) {
+@media (max-width: 739px) {
   .container {
     width: 90%;
   }
-  .container .navbar-top .logo__image {
+  .container .navbar-top {
+    padding: 28px 0;
+  }
+  .container .navbar-top .logo {
     width: 100px;
   }
-  .container .navbar-top .search {
+  .container .navbar-top .search, .container .navbar-top .user {
     display: none;
   }
-  .container .navbar-top .user {
-    display: none;
+  .container .navbar-top .menu-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 11px;
   }
-  .container .navbar-top__menu-button {
-    display: block;
-    background-color: #ffffff;
-    border: none;
+  .container .navbar-top .menu-button__line {
+    width: 16px;
+    height: 1px;
+    background-color: #333333;
+  }
+  .navbar-menu {
+    display: none;
   }
 }
 /*# sourceMappingURL=main.css.map */
