--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,14 +1,9 @@
-@media ( max-width: 1230px)
-    .container
-        width: 90%
-
 @media ( max-width: 1200px)
     .container
         width: 90%
         .navbar-top    
             .logo
-                &__image
-                    width: 133px
+                width: 133px
             .search
                 left: -10%
         
@@ -18,8 +13,7 @@
         .navbar-top 
             padding: 30px 0   
             .logo
-                &__image
-                    width: 133px
+                width: 133px
             .search
                 left: -2%
                 &__input
@@ -31,4 +25,24 @@
                 line-height: 15px
 
 
-
+@media ( max-width:739px)
+    .container
+        width: 90%
+        .navbar-top
+            padding: 28px 0
+            .logo
+                width: 100px
+            .search, .user
+                display: none
+            .menu-button
+                display: flex
+                flex-direction: column
+                align-items: center
+                justify-content: space-between
+                height: 11px
+                &__line
+                    width: 16px
+                    height: 1px
+                    background-color: $text-color
+    .navbar-menu
+        display: none
