--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -18,7 +18,7 @@
                 left: -2%
                 &__input
                     width: 340px
-        .nav
+        .navbar-menu
             padding: 22px 0
             &__link
                 font-size: 12px
