--- a/css/main.css
+++ b/css/main.css
@@ -384,12 +384,12 @@ body {
   border-radius: 6px;
   overflow: hidden;
   height: 41px;
-  left: -12%;
+  margin-left: 10%;
+  margin-right: auto;
 }
 
 .container .navbar-top .search__input {
   width: 350px;
-  height: 100%;
   padding: 0 75px 0 23px;
   font-size: 12px;
   line-height: 15px;
@@ -485,9 +485,6 @@ body {
   .container .navbar-top .logo {
     width: 133px;
   }
-  .container .navbar-top .search {
-    left: -10%;
-  }
 }
 
 @media (max-width: 992px) {
@@ -501,21 +498,24 @@ body {
     width: 133px;
   }
   .container .navbar-top .search {
-    left: -2%;
+    margin-left: 8%;
   }
   .container .navbar-top .search__input {
     width: 340px;
   }
-  .container .navbar-menu {
+  .navbar-bottom .container {
+    width: 87%;
+  }
+  .navbar-bottom .container .navbar-menu {
     padding: 22px 0;
   }
-  .container .navbar-menu__link {
+  .navbar-bottom .container__link {
     font-size: 12px;
     line-height: 15px;
   }
 }
 
-@media (max-width: 739px) {
+@media (max-width: 750px) {
   .container {
     width: 90%;
   }
