--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,8 +4,6 @@
         .navbar-top    
             .logo
                 width: 133px
-            .search
-                left: -10%
         
 @media ( max-width: 992px)
     .container
@@ -15,17 +13,20 @@
             .logo
                 width: 133px
             .search
-                left: -2%
+                margin-left: 8%
                 &__input
                     width: 340px
-        .navbar-menu
-            padding: 22px 0
+    .navbar-bottom
+        .container
+            width: 87%
+            .navbar-menu
+                padding: 22px 0
             &__link
                 font-size: 12px
                 line-height: 15px
 
 
-@media ( max-width:739px)
+@media ( max-width:750px)
     .container
         width: 90%
         .navbar-top
