--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -16,10 +16,10 @@
             border-radius: 6px
             overflow: hidden
             height: 41px
-            left: -12%
+            margin-left: 10%
+            margin-right: auto
             &__input 
                 width: 350px
-                height: 100%
                 padding: 0 75px 0 23px
                 font-size: 12px
                 line-height: 15px
