--- a/sass/main.sass
+++ b/sass/main.sass
@@ -5,5 +5,7 @@
 //Общие настройки//
 @import "blocks/header"
 //Стили header//
+@import "blocks/breadcrump"
+//Хлебные крошки//
 @import "media"
 //Стили для мобильных устройств//
