--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,63 +1,60 @@
 .navbar
     background-color: $color-w   
-    .container
-        max-width: 1110px
-        margin: 0 auto
-        .navbar-top 
+    &-top 
+        display: flex
+        justify-content: space-between
+        align-items: center
+        padding: 40px 0
+        .logo
+            width: 177px
+            &__image
+                max-width: 100%
+        .search 
             display: flex
-            justify-content: space-between
-            align-items: center
-            padding: 40px 0
-            .logo
-                width: 177px
-                &__image
-                    max-width: 100%
-            .search 
-                display: flex
-                position: relative
-                border-radius: 6px
-                overflow: hidden
-                height: 41px
-                margin-left: 10%
-                margin-right: auto
-                &__input 
-                    width: 350px
-                    padding: 0 75px 0 23px
-                    font-size: 12px
-                    line-height: 15px
-                    border: none
-                    background-color: #f5fafe
-                    color: $text-color
-                &__button 
-                    position: absolute
-                    width: 65px
-                    height: 100%
-                    top: 0
-                    right: 0
-                    background-color: $primary
-                    border: 0
-                    cursor: pointer
-            .user 
-                display: flex
-                align-items: center
-                font-size: 14px
-                line-height: 18px
-                text-decoration: none
+            position: relative
+            border-radius: 6px
+            overflow: hidden
+            height: 41px
+            margin-left: 10%
+            margin-right: auto
+            &__input 
+                width: 350px
+                padding: 0 75px 0 23px
+                font-size: 12px
+                line-height: 15px
+                border: none
+                background-color: #f5fafe
                 color: $text-color
-                &__avatar 
-                    width: 40px
-                    height: 40px
-                    object-fit: cover
-                    border-radius: 50%
-                &__name
-                    margin-left: 18px
-                &:hover
-                    text-decoration: underline
-            &__menu-button
-                display: none
-.navbar-bottom
-    background-color: #0A223D
-    .navbar-menu
+            &__button 
+                position: absolute
+                width: 65px
+                height: 100%
+                top: 0
+                right: 0
+                background-color: $primary
+                border: 0
+                cursor: pointer
+        .user 
+            display: flex
+            align-items: center
+            font-size: 14px
+            line-height: 18px
+            text-decoration: none
+            color: $text-color
+            &__avatar 
+                width: 40px
+                height: 40px
+                object-fit: cover
+                border-radius: 50%
+            &__name
+                margin-left: 18px
+            &:hover
+                text-decoration: underline
+        &__menu-button
+            display: none
+    &-bottom
+        background-color: #0A223D
+    &-menu
         padding: 31px 0
         &__list
             display: flex
