--- a/sass/main.sass
+++ b/sass/main.sass
@@ -7,5 +7,7 @@
 //Стили header//
 @import "blocks/breadcrump"
 //Хлебные крошки//
+@import "blocks/hotel"
+//Информация об отеле//
 @import "media"
 //Стили для мобильных устройств//
