Updated "hotel": added tablet, mobile responsivity

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -46,4 +46,21 @@
                     height: 1px
                     background-color: $text-color
     .navbar-menu
-        display: none
+        display: none   
+    .hotel
+        padding-bottom: 40px
+        &-info
+            &__text
+                max-width: 100%
+                padding: 5px 0 20px 0
+                .offer
+                    order: -1
+                    margin: 0
+                .stars
+                    flex-basis: auto
+                    margin-right: 19px
+                .name
+                    flex-basis: 100%
+                    margin: 10px 0 5px 0
+        &-rating
+            display: none
