--- a/css/main.css
+++ b/css/main.css
@@ -560,7 +560,7 @@ body {
   padding: 4px 9px;
   font-size: 10px;
   line-height: 13px;
-  border-radius: 4px;
+  border-radius: 3px;
   color: #ffffff;
   background-color: #ec1f46;
 }
@@ -676,6 +676,32 @@ body {
     background-color: #333333;
   }
   .navbar-menu {
+    display: none;
+  }
+  .hotel {
+    padding-bottom: 40px;
+  }
+  .hotel-info__text {
+    max-width: 100%;
+    padding: 5px 0 20px 0;
+  }
+  .hotel-info__text .offer {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin: 0;
+  }
+  .hotel-info__text .stars {
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    margin-right: 19px;
+  }
+  .hotel-info__text .name {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin: 10px 0 5px 0;
+  }
+  .hotel-rating {
     display: none;
   }
 }
