--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -24,7 +24,8 @@
                 &__link
                     font-size: 12px
                     line-height: 15px
-
+    .hotel
+        padding-bottom: 60px
 
 @media ( max-width:750px)
     .container
