--- a/css/main.css
+++ b/css/main.css
@@ -487,9 +487,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin: 0;
   padding: 18px 0;
   font-size: 10px;
@@ -549,7 +546,7 @@ body {
 }
 
 .hotel-info__text .name {
-  margin: 4px 0 0 0;
+  margin: 4px 0 5px 0;
   font-size: 24px;
   line-height: 30px;
   color: #333333;
@@ -638,6 +635,9 @@ body {
   .navbar-bottom .container .navbar-menu__link {
     font-size: 12px;
     line-height: 15px;
+  }
+  .hotel {
+    padding-bottom: 60px;
   }
 }
 
