--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -14,7 +14,7 @@
             .stars
                 flex-basis: 100%
             .name
-                margin: 4px 0 0 0
+                margin: 4px 0 5px 0
                 font-size: 24px
                 line-height: 30px
                 color: $text-color
