--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -34,6 +34,11 @@
                 background-color: $primary
                 border: 0
                 cursor: pointer
+            &__icon
+                width: 16px
+                height: 16px
+                fill: $color-w
+                
         .user 
             display: flex
             align-items: center
