--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -13,6 +13,9 @@
             padding: 21px 0
             .stars
                 flex-basis: 100%
+                .star
+                    width: 8px
+                    height: 8px
             .name
                 margin: 4px 0 5px 0
                 font-size: 24px
