--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -16,6 +16,9 @@
                 .star
                     width: 8px
                     height: 8px
+                    margin-right: 2px
+                    &:last-child
+                        margin: 0
             .name
                 margin: 4px 0 5px 0
                 font-size: 24px
