--- a/css/main.css
+++ b/css/main.css
@@ -631,6 +631,73 @@ body {
   content: "/";
 }
 
+.hotel-grid .slider {
+  max-width: 728px;
+}
+
+.hotel-grid .slider .swiper-container {
+  position: relative;
+  width: 100%;
+  height: 450px;
+  border-radius: 8px;
+}
+
+.hotel-grid .slider .swiper-container:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 122, 223, 0.48)), to(rgba(255, 255, 255, 0.128)));
+  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+}
+
+.hotel-grid .slider .swiper-container .swiper-slide .slide {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.hotel-grid .slider .swiper-container .slider-button {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 99;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 30px;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.hotel-grid .slider .swiper-container .slider-button__prev {
+  left: 18px;
+}
+
+.hotel-grid .slider .swiper-container .slider-button__next {
+  right: 18px;
+}
+
+.hotel-grid .slider .swiper-container .slider-button__icon_prev, .hotel-grid .slider .swiper-container .slider-button__icon_next {
+  width: 10px;
+  height: 18px;
+  fill: #ffffff;
+  opacity: 0.8;
+}
+
 @media (max-width: 1200px) {
   .container {
     width: 90%;
