--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -73,16 +73,16 @@
                 width: 100%
                 height: 450px
                 border-radius: 8px
-                &:after
-                    content: ""
-                    position: absolute
-                    z-index: 1
-                    width: 100%
-                    height: 100%
-                    top: 0
-                    left: 0
-                    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
                 .swiper-slide
+                    &:after
+                        content: ""
+                        position: absolute
+                        z-index: 1
+                        width: 100%
+                        height: 100%
+                        top: 0
+                        left: 0
+                        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
                     .slide
                         width: 100%
                         height: 100%
