--- a/css/main.css
+++ b/css/main.css
@@ -631,6 +631,15 @@ body {
   content: "/";
 }
 
+.hotel-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .hotel-grid .slider {
   max-width: 728px;
 }
@@ -696,6 +705,139 @@ body {
   height: 18px;
   fill: #ffffff;
   opacity: 0.8;
+}
+
+.hotel-grid .hotel-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hotel-grid .hotel-wrapper .booking-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 210px;
+  padding: 26px;
+  font-family: "Nunito",sans-serif;
+  color: #ffffff;
+  border-radius: 8px;
+  background-color: #0A223D;
+}
+
+.hotel-grid .hotel-wrapper .booking-card__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hotel-grid .hotel-wrapper .booking-card .price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 9px;
+}
+
+.hotel-grid .hotel-wrapper .booking-card .price__txt {
+  font-size: 10px;
+  line-height: 14px;
+}
+
+.hotel-grid .hotel-wrapper .booking-card .price__value {
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 33px;
+}
+
+.hotel-grid .hotel-wrapper .booking-card .properties {
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.hotel-grid .hotel-wrapper .booking-card .properties__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 8px;
+}
+
+.hotel-grid .hotel-wrapper .booking-card .properties__icon {
+  width: 14px;
+  height: 14px;
+  margin-right: 9px;
+  fill: #ffffff;
+}
+
+.hotel-grid .hotel-wrapper .booking-card__phone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 17px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.hotel-grid .hotel-wrapper .booking-card__phone .number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  color: inherit;
+}
+
+.hotel-grid .hotel-wrapper .booking-card__phone .number__icon {
+  width: 14px;
+  height: 14px;
+  margin-right: 8px;
+  fill: #ffffff;
+}
+
+.hotel-grid .hotel-wrapper .booking-card__button {
+  padding: 13px 84px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 19px;
+  text-decoration: none;
+  color: inherit;
+  border-radius: 4px;
+  background-color: #ec1f46;
 }
 
 @media (max-width: 1200px) {
