--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -180,3 +180,7 @@
                     color: inherit
                     border-radius: 4px
                     background-color: $primary
+            .map
+                &__item
+                    border-radius: 10px
+                    border: 0
