--- a/css/main.css
+++ b/css/main.css
@@ -642,12 +642,13 @@ body {
 
 .hotel-grid .slider {
   max-width: 728px;
+  height: 450px;
 }
 
 .hotel-grid .slider .swiper-container {
   position: relative;
   width: 100%;
-  height: 450px;
+  height: 100%;
   border-radius: 8px;
 }
 
@@ -707,7 +708,7 @@ body {
   opacity: 0.8;
 }
 
-.hotel-grid .hotel-wrapper {
+.hotel-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -720,7 +721,7 @@ body {
           justify-content: space-between;
 }
 
-.hotel-grid .hotel-wrapper .booking-card {
+.hotel-wrapper .booking-card {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -731,6 +732,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 350px;
   height: 210px;
   padding: 26px;
   font-family: "Nunito",sans-serif;
@@ -739,7 +741,7 @@ body {
   background-color: #0A223D;
 }
 
-.hotel-grid .hotel-wrapper .booking-card__content {
+.hotel-wrapper .booking-card__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -751,7 +753,7 @@ body {
           align-items: center;
 }
 
-.hotel-grid .hotel-wrapper .booking-card .price {
+.hotel-wrapper .booking-card .price {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -762,23 +764,23 @@ body {
   margin-bottom: 9px;
 }
 
-.hotel-grid .hotel-wrapper .booking-card .price__txt {
+.hotel-wrapper .booking-card .price__txt {
   font-size: 10px;
   line-height: 14px;
 }
 
-.hotel-grid .hotel-wrapper .booking-card .price__value {
+.hotel-wrapper .booking-card .price__value {
   font-weight: 800;
   font-size: 24px;
   line-height: 33px;
 }
 
-.hotel-grid .hotel-wrapper .booking-card .properties {
+.hotel-wrapper .booking-card .properties {
   font-size: 12px;
   line-height: 16px;
 }
 
-.hotel-grid .hotel-wrapper .booking-card .properties__item {
+.hotel-wrapper .booking-card .properties__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -791,14 +793,14 @@ body {
   margin-bottom: 8px;
 }
 
-.hotel-grid .hotel-wrapper .booking-card .properties__icon {
+.hotel-wrapper .booking-card .properties__icon {
   width: 14px;
   height: 14px;
   margin-right: 9px;
   fill: #ffffff;
 }
 
-.hotel-grid .hotel-wrapper .booking-card__phone {
+.hotel-wrapper .booking-card__phone {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -811,7 +813,7 @@ body {
   line-height: 25px;
 }
 
-.hotel-grid .hotel-wrapper .booking-card__phone .number {
+.hotel-wrapper .booking-card__phone .number {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -822,14 +824,14 @@ body {
   color: inherit;
 }
 
-.hotel-grid .hotel-wrapper .booking-card__phone .number__icon {
+.hotel-wrapper .booking-card__phone .number__icon {
   width: 14px;
   height: 14px;
   margin-right: 8px;
   fill: #ffffff;
 }
 
-.hotel-grid .hotel-wrapper .booking-card__button {
+.hotel-wrapper .booking-card__button {
   padding: 13px 84px;
   text-align: center;
   font-size: 14px;
@@ -840,23 +842,31 @@ body {
   background-color: #ec1f46;
 }
 
-.hotel-grid .hotel-wrapper .map__item {
+.hotel-wrapper .map {
+  width: 350px;
+}
+
+.hotel-wrapper .map__item {
   border-radius: 10px;
   border: 0;
+  background: none;
 }
 
 @media (max-width: 1200px) {
   .container {
-    width: 90%;
+    width: 960px;
   }
   .container .navbar-top .logo {
     width: 133px;
+  }
+  .container .slider {
+    width: 590px;
   }
 }
 
 @media (max-width: 992px) {
   .container {
-    width: 90%;
+    width: 700px;
   }
   .container .navbar-top {
     padding: 30px 0;
@@ -871,7 +881,7 @@ body {
     width: 340px;
   }
   .navbar-bottom .container {
-    width: 87%;
+    width: 673px;
   }
   .navbar-bottom .container .navbar-menu {
     padding: 22px 0;
@@ -883,9 +893,125 @@ body {
   .hotel {
     padding-bottom: 60px;
   }
+  .hotel-grid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel-grid .slider {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .hotel-wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .hotel-wrapper .booking-card {
+    width: 340px;
+    padding: 27px 22px;
+  }
+  .hotel-wrapper .map {
+    width: 340px;
+  }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 759px) {
+  .container {
+    width: 576px;
+  }
+  .container .navbar-top {
+    padding: 28px 0;
+  }
+  .container .navbar-top .logo {
+    width: 100px;
+  }
+  .container .navbar-top .search, .container .navbar-top .user {
+    display: none;
+  }
+  .container .navbar-top .menu-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 11px;
+  }
+  .container .navbar-top .menu-button__line {
+    width: 16px;
+    height: 1px;
+    background-color: #333333;
+  }
+  .navbar-menu {
+    display: none;
+  }
+  .hotel {
+    padding-bottom: 40px;
+  }
+  .hotel-info__text {
+    max-width: 100%;
+    padding: 5px 0 20px 0;
+  }
+  .hotel-info__text .offer {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin: 0;
+  }
+  .hotel-info__text .stars {
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    margin-right: 19px;
+  }
+  .hotel-info__text .name {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin: 10px 0 5px 0;
+  }
+  .hotel-rating {
+    display: none;
+  }
+  .hotel-grid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel-grid .slider {
+    max-width: 100%;
+    height: 350px;
+    margin-bottom: 20px;
+  }
+  .hotel-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel-wrapper .booking-card {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 27px 22px;
+  }
+  .hotel-wrapper .booking-card__button {
+    padding: 13px 54px;
+  }
+  .hotel-wrapper .map {
+    width: 100%;
+  }
+}
+
+@media (max-width: 619px) {
   .container {
     width: 90%;
   }
@@ -947,6 +1073,34 @@ body {
   }
   .hotel-rating {
     display: none;
+  }
+  .hotel-grid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel-grid .slider {
+    max-width: 100%;
+    height: 250px;
+    margin-bottom: 20px;
+  }
+  .hotel-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel-wrapper .booking-card {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 27px 22px;
+  }
+  .hotel-wrapper .booking-card__button {
+    padding: 13px 54px;
+  }
+  .hotel-wrapper .map {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=main.css.map */
