--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,13 +1,15 @@
 @media ( max-width: 1200px)
     .container
-        width: 90%
+        width: 960px
         .navbar-top    
             .logo
                 width: 133px
+        .slider
+            width: 590px
         
 @media ( max-width: 992px)
     .container
-        width: 90%
+        width: 700px
         .navbar-top 
             padding: 30px 0   
             .logo
@@ -18,7 +20,7 @@
                     width: 340px
     .navbar-bottom
         .container
-            width: 87%
+            width: 673px
             .navbar-menu
                 padding: 22px 0
                 &__link
@@ -26,8 +28,77 @@
                     line-height: 15px
     .hotel
         padding-bottom: 60px
+        &-grid
+            flex-direction: column
+            .slider
+                width: 100%
+                margin-bottom: 30px
+        &-wrapper
+            flex-direction: row
+            .booking-card
+                width: 340px
+                padding: 27px 22px
+            .map
+                width: 340px
+                
+@media ( max-width:759px)
+    .container
+        width: 576px
+        .navbar-top
+            padding: 28px 0
+            .logo
+                width: 100px
+            .search, .user
+                display: none
+            .menu-button
+                display: flex
+                flex-direction: column
+                align-items: center
+                justify-content: space-between
+                height: 11px
+                &__line
+                    width: 16px
+                    height: 1px
+                    background-color: $text-color
+    .navbar-menu
+        display: none   
+    .hotel
+        padding-bottom: 40px
+        &-info
+            &__text
+                max-width: 100%
+                padding: 5px 0 20px 0
+                .offer
+                    order: -1
+                    margin: 0
+                .stars
+                    flex-basis: auto
+                    margin-right: 19px
+                .name
+                    flex-basis: 100%
+                    margin: 10px 0 5px 0
+        &-rating
+            display: none
+        &-grid
+            flex-direction: column
+            .slider
+                max-width: 100%
+                height: 350px
+                margin-bottom: 20px
+        &-wrapper
+            flex-direction: column
+            .booking-card
+                
+                width: 100%
+                margin-bottom: 20px
+                padding: 27px 22px
+                &__button
+                    padding: 13px 54px
+            .map
+                
+                width: 100%
 
-@media ( max-width:750px)
+@media ( max-width: 619px )
     .container
         width: 90%
         .navbar-top
@@ -65,3 +136,19 @@
                     margin: 10px 0 5px 0
         &-rating
             display: none
+        &-grid
+            flex-direction: column
+            .slider
+                max-width: 100%
+                height: 250px
+                margin-bottom: 20px
+        &-wrapper
+            flex-direction: column
+            .booking-card
+                width: 100%
+                margin-bottom: 20px
+                padding: 27px 22px
+                &__button
+                    padding: 13px 54px
+            .map
+                width: 100%
