--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -70,10 +70,11 @@
         justify-content: space-between
         .slider
             max-width: 728px
+            height: 450px
             .swiper-container
                 position: relative 
                 width: 100%
-                height: 450px
+                height: 100%
                 border-radius: 8px
                 .swiper-slide
                     &:after
@@ -112,75 +113,78 @@
                             height: 18px
                             fill: $color-w
                             opacity: 0.8
-        .hotel-wrapper
+    &-wrapper
+        display: flex
+        flex-direction: column
+        justify-content: space-between   
+        .booking-card
             display: flex
             flex-direction: column
-            justify-content: space-between   
-            .booking-card
+            justify-content: space-between
+            width: 350px
+            height: 210px
+            padding: 26px
+            font-family: "Nunito",sans-serif
+            color: $color-w
+            border-radius: 8px
+            background-color: #0A223D
+            &__content
+                display: flex
+                justify-content: space-between
+                align-items: center
+            .price
                 display: flex
                 flex-direction: column
-                justify-content: space-between
-                height: 210px
-                padding: 26px
-                font-family: "Nunito",sans-serif
-                color: $color-w
-                border-radius: 8px
-                background-color: #0A223D
-                &__content
+                margin-bottom: 9px
+                &__txt
+                    font-size: 10px
+                    line-height: 14px
+                &__value
+                    font-weight: 800
+                    font-size: 24px
+                    line-height: 33px
+            .properties
+                font-size: 12px
+                line-height: 16px
+                &__item
                     display: flex
-                    justify-content: space-between
                     align-items: center
-                .price
+                    justify-content: space-between
+                    margin-bottom: 8px
+                &__icon
+                    width: 14px
+                    height: 14px
+                    margin-right: 9px
+                    fill: $color-w
+            &__phone
+                display: flex
+                justify-content: space-between
+                margin-bottom: 17px
+                font-weight: 600
+                font-size: 18px
+                line-height: 25px
+                .number
                     display: flex
-                    flex-direction: column
-                    margin-bottom: 9px
-                    &__txt
-                        font-size: 10px
-                        line-height: 14px
-                    &__value
-                        font-weight: 800
-                        font-size: 24px
-                        line-height: 33px
-                .properties
-                    font-size: 12px
-                    line-height: 16px
-                    &__item
-                        display: flex
-                        align-items: center
-                        justify-content: space-between
-                        margin-bottom: 8px
+                    align-items: center
+                    text-decoration: none
+                    color: inherit
                     &__icon
                         width: 14px
                         height: 14px
-                        margin-right: 9px
+                        margin-right: 8px
                         fill: $color-w
-                &__phone
-                    display: flex
-                    justify-content: space-between
-                    margin-bottom: 17px
-                    font-weight: 600
-                    font-size: 18px
-                    line-height: 25px
-                    .number
-                        display: flex
-                        align-items: center
-                        text-decoration: none
-                        color: inherit
-                        &__icon
-                            width: 14px
-                            height: 14px
-                            margin-right: 8px
-                            fill: $color-w
-                &__button
-                    padding: 13px 84px
-                    text-align: center
-                    font-size: 14px
-                    line-height: 19px
-                    text-decoration: none
-                    color: inherit
-                    border-radius: 4px
-                    background-color: $primary
-            .map
-                &__item
-                    border-radius: 10px
-                    border: 0
+            &__button
+                padding: 13px 84px
+                text-align: center
+                font-size: 14px
+                line-height: 19px
+                text-decoration: none
+                color: inherit
+                border-radius: 4px
+                background-color: $primary
+        .map
+            width: 350px
+            &__item
+                border-radius: 10px
+                border: 0
+                
