--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -184,7 +184,6 @@
                 background-color: $primary
         .map
             width: 350px
-            &__item
-                border-radius: 10px
-                border: 0
+            height: 210px
+            
                 
