--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -185,5 +185,5 @@
         .map
             width: 350px
             height: 210px
-            
+            border-radius: 10px
                 
