--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -186,4 +186,6 @@
             width: 350px
             height: 210px
             border-radius: 10px
+            overflow: hidden
+            
                 
