--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,6 +8,8 @@
 @import "blocks/breadcrump"
 //Хлебные крошки//
 @import "blocks/hotel"
-//Информация об отеле//
+//Стили hotel//
+@import "blocks/newsletter"
+//Стили newsletter//
 @import "media"
 //Стили для мобильных устройств//
