--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -40,7 +40,10 @@
                 padding: 27px 22px
             .map
                 width: 340px
-                
+    .newsletter
+        &__wrapper
+            width: 700px
+            padding: 92px 0            
 @media ( max-width:759px)
     .container
         width: 576px
@@ -97,7 +100,14 @@
             .map
                 
                 width: 100%
-
+    .newsletter
+        &__wrapper
+            flex-direction: column
+            align-items: start
+            width: 576px
+            height: 320px
+            margin-bottom: 37px
+            padding: 76px 20px 83px 
 @media ( max-width: 619px )
     .container
         width: 90%
@@ -140,7 +150,7 @@
             flex-direction: column
             .slider
                 max-width: 100%
-                height: 250px
+                height: 179px
                 margin-bottom: 20px
         &-wrapper
             flex-direction: column
@@ -152,3 +162,21 @@
                     padding: 13px 54px
             .map
                 width: 100%
+                height: 179px
+    .newsletter
+        &__wrapper
+            flex-direction: column
+            align-items: start
+            width: 90%
+            height: 320px
+            margin-bottom: 37px
+            padding: 76px 0 83px
+        &__title
+            font-size: 20px
+            line-height: 25px
+            &__strong
+                font-size: 30px
+                line-height: 38px
+        .subscribe
+            &__input
+                width: 280px
