--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,9 +4,9 @@
         .navbar-top    
             .logo
                 width: 133px
-        .slider
+        .hotel__slider
             width: 590px
-        
+
 @media ( max-width: 992px)
     .container
         width: 700px
@@ -30,9 +30,9 @@
         padding-bottom: 60px
         &-grid
             flex-direction: column
-            .slider
-                width: 100%
-                margin-bottom: 30px
+        &__slider
+            max-width: 100%
+            margin-bottom: 30px
         &-wrapper
             flex-direction: row
             .booking-card
@@ -43,7 +43,8 @@
     .newsletter
         &__wrapper
             width: 700px
-            padding: 92px 0            
+            padding: 92px 0 
+
 @media ( max-width:759px)
     .container
         width: 576px
@@ -84,10 +85,10 @@
             display: none
         &-grid
             flex-direction: column
-            .slider
-                max-width: 100%
-                height: 350px
-                margin-bottom: 20px
+        &__slider
+            width: 100%
+            height: 350px
+            margin-bottom: 20px
         &-wrapper
             flex-direction: column
             .booking-card
@@ -108,6 +109,7 @@
             height: 320px
             margin-bottom: 37px
             padding: 76px 20px 83px 
+            
 @media ( max-width: 619px )
     .container
         width: 90%
@@ -148,10 +150,10 @@
             display: none
         &-grid
             flex-direction: column
-            .slider
-                max-width: 100%
-                height: 179px
-                margin-bottom: 20px
+        &__slider
+            max-width: 100%
+            height: 179px
+            margin-bottom: 20px
         &-wrapper
             flex-direction: column
             .booking-card
