--- a/sass/main.sass
+++ b/sass/main.sass
@@ -11,5 +11,7 @@
 //Стили hotel//
 @import "blocks/newsletter"
 //Стили newsletter//
+@import "blocks/review"
+//Стили review
 @import "media"
 //Стили для мобильных устройств//
