--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -68,51 +68,49 @@
     &-grid
         display: flex
         justify-content: space-between
-        .slider
-            max-width: 728px
-            height: 450px
-            .swiper-container
-                position: relative 
+    &-slider
+        position: relative
+        width: 728px
+        height: 450px
+        margin: 0
+        border-radius: 8px
+        &__item
+            &:after
+                content: ""
+                position: absolute
+                z-index: 1
                 width: 100%
                 height: 100%
-                border-radius: 8px
-                .swiper-slide
-                    &:after
-                        content: ""
-                        position: absolute
-                        z-index: 1
-                        width: 100%
-                        height: 100%
-                        top: 0
-                        left: 0
-                        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-                    .slide
-                        width: 100%
-                        height: 100%
-                        object-fit: cover
-                .slider-button
-                    position: absolute
-                    top: 50%
-                    transform: translateY(-50%)
-                    z-index: 99
-                    display: flex
-                    justify-content: center
-                    align-items: center
-                    width: 30px
-                    height: 30px
-                    border: none
-                    cursor: pointer
-                    background-color: transparent
-                    &__prev
-                        left: 18px
-                    &__next
-                        right: 18px
-                    &__icon
-                        &_prev, &_next
-                            width: 10px
-                            height: 18px
-                            fill: $color-w
-                            opacity: 0.8
+                top: 0
+                left: 0
+                background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+        &__slide
+            width: 100%
+            height: 100%
+            object-fit: cover
+        &__button
+            position: absolute
+            top: 50%
+            transform: translateY(-50%)
+            z-index: 99
+            display: flex
+            justify-content: center
+            align-items: center
+            width: 30px
+            height: 30px
+            border: none
+            cursor: pointer
+            background-color: transparent
+            &_prev
+                left: 18px
+            &_next
+                right: 18px
+        &__icon
+            &_prev, &_next
+                width: 10px
+                height: 18px
+                fill: $color-w
+                opacity: 0.8
     &-wrapper
         display: flex
         flex-direction: column
