--- a/css/main.css
+++ b/css/main.css
@@ -845,6 +845,12 @@ body {
   overflow: hidden;
 }
 
+.hotel-wrapper .map__item {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
 .newsletter {
   position: relative;
   background-image: url(../img/3.newsletter/background-img.jpg);
@@ -939,6 +945,7 @@ body {
 
 .reviews__title {
   margin: 0 0 70px 0;
+  font-weight: 700;
   font-size: 36px;
   line-height: 45px;
   text-align: center;
@@ -1155,6 +1162,27 @@ body {
     width: 700px;
     padding: 92px 0;
   }
+  .reviews__title {
+    margin: 0 0 50px 0;
+  }
+  .reviews-slider__item {
+    width: 579px;
+  }
+  .reviews-slider__item::before {
+    display: none;
+  }
+  .reviews-slider__item::after {
+    display: none;
+  }
+  .reviews-slider__text {
+    max-width: 455px;
+  }
+  .reviews-slider__button_prev {
+    left: 0;
+  }
+  .reviews-slider__button_next {
+    right: 0;
+  }
 }
 
 @media (max-width: 759px) {
@@ -1260,6 +1288,28 @@ body {
     height: 320px;
     margin-bottom: 37px;
     padding: 76px 20px 83px;
+  }
+  .reviews__title {
+    margin: 0 0 50px 0;
+    font-size: 29px;
+  }
+  .reviews-slider__item {
+    width: 100%;
+  }
+  .reviews-slider__item::before {
+    display: none;
+  }
+  .reviews-slider__item::after {
+    display: none;
+  }
+  .reviews-slider__text {
+    max-width: 455px;
+  }
+  .reviews-slider__button_prev {
+    left: 0;
+  }
+  .reviews-slider__button_next {
+    right: 0;
   }
 }
 
@@ -1378,6 +1428,34 @@ body {
   }
   .newsletter .subscribe__input {
     width: 280px;
+  }
+  .reviews {
+    padding: 40px 0 50px 0;
+  }
+  .reviews__title {
+    margin: 0 0 42px 0;
+    font-size: 18px;
+  }
+  .reviews-slider__item {
+    width: 100%;
+    padding: 0 31px 36px;
+  }
+  .reviews-slider__item::before {
+    display: none;
+  }
+  .reviews-slider__item::after {
+    display: none;
+  }
+  .reviews-slider__text {
+    max-width: 455px;
+  }
+  .reviews-slider__button_prev {
+    top: 45px;
+    left: 19%;
+  }
+  .reviews-slider__button_next {
+    top: 45px;
+    right: 19%;
   }
 }
 /*# sourceMappingURL=main.css.map */
