--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -185,5 +185,8 @@
             height: 210px
             border-radius: 10px
             overflow: hidden
-            
+            &__item
+                width: 100%
+                height: 100%
+                border: 0 
                 
