--- a/sass/blocks/_review.sass
+++ b/sass/blocks/_review.sass
@@ -2,6 +2,7 @@
     padding: 40px 0 70px
     &__title
         margin: 0 0 70px 0
+        font-weight: 700
         font-size: 36px
         line-height: 45px
         text-align: center
