--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,13 +1,13 @@
-@media ( max-width: 1200px)
+@media ( max-width: 1200px )
     .container
         width: 960px
-        .navbar-top    
+        .navbar-top
             .logo
                 width: 133px
-        .hotel__slider
-            width: 590px
+    .hotel__slider
+        width: 590px
 
-@media ( max-width: 992px)
+@media ( max-width: 992px )
     .container
         width: 700px
         .navbar-top 
@@ -31,7 +31,7 @@
         &-grid
             flex-direction: column
         &__slider
-            max-width: 100%
+            width: 100%
             margin-bottom: 30px
         &-wrapper
             flex-direction: row
